src/crode/test/valid/night.crode
canvas "Night" width 800 height 600 background black {
    let snowflake = circle {
        radius random(2, 6)
        color white
    }

    let stars = star {
        size random(0, 30)
        color yellow
    }

    repeat 300 {
        if random(0,1) lessThan 0.5 {
            draw snowflake at (random(0,780), random(0,580))
        } else {
            draw stars at (random(0, 780), random(0, 200)) rotate random(0,90)
        }
    }
}
